--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
   <main class="container">
     <!-- SUMMARY -->
     <section id="summary" class="section">
-      <h2>Summary</h2>
+      <h2>Peresonal Summary</h2>
       <p>
         Senior Computer Science major at Florida State University (graduating May 2026) with a wide technical foundation
         spanning advanced AI, reverse engineering, networking, system architecture, and full‑stack development. I
         currently support complex audiovisual and IT infrastructure as an AV/IT Technician at FSU Law School, where
         reliability and fast problem‑solving are essential. I’m open to a variety of paths in software and systems
         engineering and enjoy continuously exploring new technologies. Raised in Stuart, FL, I balance my academic and
-        technical work with golfing and keeping up with football (Go Noles). GPA: 3.92.
+        technical work with golfing and keeping up with football (Go Noles).
       </p>
     </section>
 
