--- a/previews/studygarden.html
+++ b/previews/studygarden.html
@@ -65,7 +65,7 @@
 
             <a href="../assets/leaderboard.png" target="_blank" rel="noreferrer">
                 <img src="../assets/leaderboard.png" alt="StudyGarden – garden view" />
-                <div class="cap">leaderboard Page</div>
+                <div class="cap">Leaderboard Page</div>
             </a>
         </div>
 
