--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>Luke Thomson</h1>
       <p class="sub">
         Tallahassee, FL ·
-        <a href="mailto:let24a@fsu.edu">let24a@fsu.edu</a> ·
+        <a href="mailto:lthomson@law.fsu.edu">lthomson@law.fsu.edu</a> ·
         <a href="https://github.com/Luke-Thomson" target="_blank" rel="noreferrer">GitHub</a> ·
         <a href="https://linkedin.com/in/luke-thomson-88b222361" target="_blank" rel="noreferrer">LinkedIn</a>
       </p>
