--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <main class="container">
     <!-- SUMMARY -->
     <section id="summary" class="section">
-      <h2>Peresonal Summary</h2>
+      <h2>Summary</h2>
       <p>
         Senior Computer Science major at Florida State University (graduating May 2026) with a wide technical foundation
         spanning advanced AI, reverse engineering, networking, system architecture, and full‑stack development. I
